Salesforce/ISW Telegram Bot/force-app/main/default/objects/Group__c/fields/Telegram_Chat_ID__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Chat_ID__c</fullName>
    <externalId>true</externalId>
    <label>Telegram Chat ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>