Salesforce/ISW Telegram Bot/force-app/main/default/objects/Group__c/fields/Telegram_link__c.field-meta.xml
<CustomField>
    <fullName>Telegram_link__c</fullName>
    <label>Telegram link</label>
    <type>Url</type>
</CustomField>